<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_connection"
        android:icon="@drawable/ic_communication"
        android:title="@string/title_connection" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_post"
        android:title="@string/title_post" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

     <item
         android:id="@+id/navigation_calender"
         android:icon="@drawable/ic_calender"
         android:title="@string/title_calender" />

  <!--  <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_menu" />
--></menu>
