<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/create_event"
            android:layout_marginTop="@dimen/loginViewsMargin"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lay1"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Event type"
                android:textColor="@color/Black"
                android:textSize="17sp"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/eventSpiner"
                android:drawSelectorOnTop="true"
                android:entries="@array/event_type"
                android:layout_marginStart="20dp"
                />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/dharmik_karyakram"
                android:hint="@string/dharmik_karyakram"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/speaker_name"
                android:hint="@string/speaker_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                style="@style/modifiedEditText"
                android:id="@+id/event_Name"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/event_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                style="@style/modifiedEditText"
                android:hint="@string/organiser_name"
                android:maxLines="1"
                android:id="@+id/org_name"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                style="@style/modifiedEditText"
                android:hint="Contact details"
                android:maxLines="1"
                android:id="@+id/org_contact"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SELECT DATE TIME"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_time" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                style="@style/modifiedEditText"
                android:hint="Full address"
                android:maxLines="1"
                android:id="@+id/full_address"
                android:inputType="textPostalAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="Create" />


    </LinearLayout>
</androidx.cardview.widget.CardView>

